# aimem

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.ja.md  README.md  README.zh-CN.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release.yml
benchmarks/: BENCHMARKS.md  IMPLEMENTATION_PLAN.md  results_mm_truth_hybrid.jsonl  results_mm_truth_hybrid.jsonl.summary.json  results_mm_truth_keyword_only.jsonl  results_mm_truth_keyword_only.jsonl.summary.json  results_tri_hybrid.jsonl  results_tri_hybrid.jsonl.summary.json  results_tri_keyword_only.jsonl  results_tri_keyword_only.jsonl.summary.json
benchmarks/fixtures/: multimodal_truth_micro.jsonl  tri_memory_micro.jsonl
crates/aimem-bench/: Cargo.toml
crates/aimem-bench/src/: main.rs
crates/aimem-cli/: Cargo.toml  README.ja.md  README.md  README.zh-CN.md
crates/aimem-cli/src/: main.rs
crates/aimem-core/: Cargo.toml  README.ja.md  README.md  README.zh-CN.md
crates/aimem-core/examples/: basic_aimem.rs  basic_palace.rs  knowledge_graph.rs  semantic_search.rs
crates/aimem-core/src/: config.rs  db.rs  embedder.rs  extractor.rs  graph.rs  knowledge.rs  layers.rs  lib.rs  miner.rs  search.rs  types.rs
crates/aimem-core/src/convo/: mod.rs  normalize.rs
crates/aimem-core/tests/: memory_stack_filing.rs  multimodal_flow.rs  performance_smoke.rs  usage_flows.rs
crates/aimem-mcp/: Cargo.toml  README.ja.md  README.md  README.zh-CN.md
crates/aimem-mcp/src/: main.rs
