[package]
name = "aimem-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Core library for AiMem — give your AI a memory. Hybrid search + knowledge graph over Turso."
keywords = ["ai", "memory", "vector-search", "knowledge-graph", "mcp"]
categories = ["database", "text-processing"]
readme = "README.md"

[dependencies]
turso.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
anyhow.workspace = true
fastembed.workspace = true
md5.workspace = true
walkdir.workspace = true
regex.workspace = true
tracing.workspace = true
chrono.workspace = true
async-trait = "0.1.89"
reqwest = { version = "0.13.2", features = ["json"] }
base64 = "0.22.1"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tempfile = "3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
