[package]
name = "aimem-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
description = "MCP server for AiMem"
keywords = ["ai", "memory", "mcp", "agent", "server"]
categories = ["command-line-utilities"]
readme = "README.md"

[[bin]]
name = "aimem-mcp"
path = "src/main.rs"

[dependencies]
aimem-core.workspace = true
tokio.workspace = true
turso.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
md5.workspace = true
chrono.workspace = true
